syntax = "proto3";

package obs_remote.config;

import "google/protobuf/struct.proto";

service Config {
  // Gets the value of a "slot" from the selected persistent data realm.
  rpc GlobalPersistentData(GlobalPersistentDataRequest)
      returns (GlobalPersistentDataResponse);
  // Sets the value of a "slot" from the selected persistent data realm.
  rpc SetGlobalPersistentData(SetGlobalPersistentDataRequest)
      returns (SetGlobalPersistentDataResponse);
  // Gets the current video settings.
  rpc VideoSettings(VideoSettingsRequest) returns (VideoSettingsResponse);
  // Sets the current video settings.
  rpc SetVideoSettings(SetVideoSettingsRequest)
      returns (SetVideoSettingsResponse);
}

message GlobalPersistentDataRequest {
  // The name of the slot to read data from.
  string name = 1;
}

message GlobalPersistentDataResponse {
  // The value contained in the slot.
  google.protobuf.Value value = 1;
}

message SetGlobalPersistentDataRequest {
  // The name of the slot to save data to.
  string name = 1;
  // The value to apply to the slot.
  google.protobuf.Value value = 2;
}

message SetGlobalPersistentDataResponse {}

message VideoSettingsRequest {}

message VideoSettingsResponse {
  // The current video settings.
  Settings settings = 1;
}

message SetVideoSettingsRequest {
  // The video settings to apply.
  Settings settings = 1;
}

message SetVideoSettingsResponse {}

message Settings {
  // Fractional FPS value.
  Fps fps = 1;
  // Base (canvas) resolution.
  Size base = 2;
  // Output resolution.
  Size output = 3;

  message Fps {
    // Numerator of the fractional FPS value.
    uint32 numerator = 1;
    // Denominator of the fractional FPS value.
    uint32 denominator = 2;
  }

  message Size {
    // Width of the resolution in pixels.
    uint32 width = 1;
    // Height of the resolution in pixels.
    uint32 height = 2;
  }
}
